fixing ipad overflow

--- a/homestyle.css
+++ b/homestyle.css
@@ -7,7 +7,10 @@ html {
 }
 
 html, body {
-    margin: 0; height: 100%; overflow: hidden;
+    margin: 0; 
+    height: 100%; 
+    overflow: hidden; 
+    position:relative; 
 }
 
 
